fix: fix list error

--- a/recipes/indianlacchi.html
+++ b/recipes/indianlacchi.html
@@ -7,26 +7,26 @@
 </head>
 <body>
     <h1> Indian Chicken Curry (Murgh Kari) </h1>
-    <img src="https://www.allrecipes.com/thmb/pabEFrULhFKMSnaXbflh_b53Nco=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20435-indian-lassi-ddmfs-step-5-BG-3215-325bb47b7f2d4bd0b285fba764ed142d.jpg" alt="indian-lacchi">
-    <p>Learn what a lassi drink is with this basic recipe for the popular Indian beverage. You can adjust the amount of yogurt or water for a thicker or thinner consistency. Garnish with fresh mint if desired.</p>
-    <li>
-        <ul>ice cubes</ul>
-        <ul>1 ¾ cups plain yogurt</ul>
-        <ul>1 ½ cups ice water</ul>
-        <ul>6 cubes ice, crushed</ul>
-        <ul>2 teaspoons white sugar</ul>
-        <ul>1 pinch salt</ul>
-     </li>
+    <img src="https://www.allrecipes.com/thmb/pabEFrlihFKMSnaXbflh_b53Nco=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20435-indian-lassi-ddmfs-step-5-BG-3215-325bb47b7f2d4bd0b285fba764ed142d.jpg" alt="indian-lacchi">
+    <p>Learn what a lassi drink is with this basic recipe for the popliar Indian beverage. You can adjust the amount of yogurt or water for a thicker or thinner consistency. Garnish with fresh mint if desired.</p>
+    <ul>
+        <li>ice cubes</li>
+        <li>1 ¾ cups plain yogurt</li>
+        <li>1 ½ cups ice water</li>
+        <li>6 cubes ice, crushed</li>
+        <li>2 teaspoons white sugar</li>
+        <li>1 pinch salt</li>
+    </ul>
 
      <h2>Steps</h2>
-        <li>
-            <ol> Gather all ingredients.</ol>
-            <ol>Fill 6 tall glasses with ice cubes.</ol>
-            <ol>Place yogurt, ice water, crushed ice, sugar, and salt in a blender; blend until frothy.</ol>
-            <ol>Pour over ice cubes in the glasses to serve.</ol>
-            <ol><em>Recipe Tip: </em>You can substitute 1/2 teaspoon salt for the sugar for a savory lassi.</ol>
+        <ol>
+            <li> Gather all ingredients.</li>
+            <li>Fill 6 tall glasses with ice cubes.</li>
+            <li>Place yogurt, ice water, crushed ice, sugar, and salt in a blender; blend until frothy.</li>
+            <li>Pour over ice cubes in the glasses to serve.</li>
+            <li><em>Recipe Tip: </em>You can substitute 1/2 teaspoon salt for the sugar for a savory lassi.</li>
 
-        </li>
+        </ol>
         
 
     <a href="../index.html">Home</a>
