--- a/recipes/chickenmasala.html
+++ b/recipes/chickenmasala.html
@@ -9,40 +9,39 @@
     <h1> Indian Chicken Curry (Murgh Kari) </h1>
     <img src="https://www.allrecipes.com/thmb/rvJvyV3X11HaYF1v7Vqa1-NViFI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/212721-indian-chicken-curry-murgh-kari-DDMFS-4x3-330302d59ca64543b3d7ead88c226f9a.jpg" alt="Chicken-Curry">
     <p>This is a really good recipe for spicy Indian chicken curry. It's pretty easy to make and tastes better than takeout!</p>
-    
-    <li>
-        <ul>2 pounds skinless, boneless chicken breast halves</ul>
-        <ul>2 teaspoon salt</ul>
-        <ul>half cup cooking oil</ul>
-        <ul>1 and half cups chopped onion</ul>
-        <ul>1 tablespoon minced garlic</ul>
-        <ul>1 ½ teaspoons minced fresh ginger root</ul>
-        <ul>1 tablespoon curry powder</ul>
-        <ul>1 teaspoon ground cumin</ul>
-        <ul>1 teaspoon ground turmeric</ul>
-        <ul>1 teaspoon ground coriander</ul>
-        <ul>1 teaspoon cayenne pepper</ul>
-        <ul>1 tablespoon water</ul>
-        <ul>1 (15 ounce) can crushed tomatoes</ul>
-        <ul>1 cup plain yogurt</ul>
-        <ul>1 tablespoon chopped fresh cilantro</ul>
-        <ul>1 teaspoon salt</ul>
-        <ul>½ cup water</ul>
-        <ul>1 teaspoon garam masala</ul>
-        <ul>1 tablespoon chopped fresh cilantro</ul>
-        <ul>1 tablespoon fresh lemon juice</ul>
-     </li>
+    <ul>
+        <li>2 pounds skinless, boneless chicken breast halves</li>
+        <li>2 teaspoon salt</li>
+        <li>half cup cooking oil</li>
+        <li>1 and half cups chopped onion</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>1 ½ teaspoons minced fresh ginger root</li>
+        <li>1 tablespoon curry powder</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon ground turmeric</li>
+        <li>1 teaspoon ground coriander</li>
+        <li>1 teaspoon cayenne pepper</li>
+        <li>1 tablespoon water</li>
+        <li>1 (15 ounce) can crushed tomatoes</li>
+        <li>1 cup plain yogurt</li>
+        <li>1 tablespoon chopped fresh cilantro</li>
+        <li>1 teaspoon salt</li>
+        <li>½ cup water</li>
+        <li>1 teaspoon garam masala</li>
+        <li>1 tablespoon chopped fresh cilantro</li>
+        <li>1 tablespoon fresh lemon juice</li>
+    </ul>
 
      <h2>Steps</h2>
-        <li>
-            <ol> Gather all ingredients.</ol>
-            <ol>Sprinkle the chicken breasts with 2 teaspoons salt. Heat oil in a large skillet over high heat; partially cook the chicken in the hot oil in batches until completely browned on all sides. Transfer browned chicken breasts to a plate and set aside.</ol>
-            <ol>Reduce the heat to medium and add onion, garlic, and ginger to the oil remaining in the skillet. Cook and stir until onion turns soft and translucent, 5 to 8 minutes. Stir curry powder, cumin, turmeric, coriander, cayenne, and 1 tablespoon of water into the onion mixture; allow to heat together for about 1 minute while stirring.</ol>
-            <ol>Add tomatoes, yogurt, 1 tablespoon chopped cilantro, and 1 teaspoon salt to the mixture; stir to combine.</ol>
-            <ol>Return chicken breast to the skillet along with any juices on the plate. Pour in 1/2 cup water and bring to a boil, turning the chicken to coat with the sauce. Sprinkle garam masala and 1 tablespoon cilantro over the chicken.</ol>
-            <ol>Cover the skillet and simmer until chicken breasts are no longer pink in the center and the juices run clear, about 20 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C). Drizzle with lemon juice to serve.</ol>
+        <ol>
+            <li> Gather all ingredients.</li>
+            <li>Sprinkle the chicken breasts with 2 teaspoons salt. Heat oil in a large skillet over high heat; partially cook the chicken in the hot oil in batches until completely browned on all sides. Transfer browned chicken breasts to a plate and set aside.</li>
+            <li>Reduce the heat to medium and add onion, garlic, and ginger to the oil remaining in the skillet. Cook and stir until onion turns soft and translucent, 5 to 8 minutes. Stir curry powder, cumin, turmeric, coriander, cayenne, and 1 tablespoon of water into the onion mixture; allow to heat together for about 1 minute while stirring.</li>
+            <li>Add tomatoes, yogurt, 1 tablespoon chopped cilantro, and 1 teaspoon salt to the mixture; stir to combine.</li>
+            <li>Return chicken breast to the skillet along with any juices on the plate. Pour in 1/2 cup water and bring to a boil, turning the chicken to coat with the sauce. Sprinkle garam masala and 1 tablespoon cilantro over the chicken.</li>
+            <li>Cover the skillet and simmer until chicken breasts are no longer pink in the center and the juices run clear, about 20 minutes. An instant-read thermometer inserted into the center shliid read at least 165 degrees F (74 degrees C). Drizzle with lemon juice to serve.</li>
 
-        </li>
+        </ol>
 
     <a href="../index.html">Home</a>
 </body>
