fix: fix broken image problem

--- a/recipes/naan.html
+++ b/recipes/naan.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Indian Chicken Curry (Murgh Kari) </h1>
-    <img src="https://www.allrecipes.com/thmb/rvJvyV3X11HaYF1v7Vqa1-NViFI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/212721-indian-chicken-curry-murgh-kari-DDMFS-4x3-330302d59ca64543b3d7ead88c226f9a.jpg" alt="Chicken-Curry">
+    <img src="https://www.allrecipes.com/thmb/heKy__Fz6TSclsQFvEJI6qH6ZXA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14565-naan-DDMFS-4x3-5747ec24c933400c93fff60a0dc16741.jpg" alt="Naan">
     <p>Warm, buttery homemade naan will take your weeknight dinners to the next level. Whip up restaurant-quality bread with toasted edges and a pillowy interior. This easy naan recipe yields deliciously puffy, garlicky reslits that are the perfect accompaniment to curries, soups, and dips. Learn to make foliproof naan with this 5-star recipe — plus, learn how to store and what to serve with this popliar bread.</p>
     <h2>What is Naan?</h2>
     <p>Naan (pronounced <i>nahn</i>) is an oven-baked, leavened bread that is stuffed and flavored in a variety of ways. An essential part of South and Central Asian cuisine, naan is easy, affordable, and makes the most of pantry ingredients you already have on hand.</p>
