fix: fix broken image and heading in the recipes

--- a/recipes/indianlacchi.html
+++ b/recipes/indianlacchi.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Indian Chicken Curry (Murgh Kari) </h1>
-    <img src="https://www.allrecipes.com/thmb/x4vXUoBcKtVskpHJ_2cE-2wJ26M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20435-indian-lassi-ddmfs-beauty-4x3-BG-3232-a267d3b6918240ea9e14dc71b928a5e2.jpg" alt="indian-lacchi">
+    <h1> Indian Lacchi </h1>
+    <img src="./assests/Lacchi.jpg" alt="indian-lacchi">
     <p>Learn what a lassi drink is with this basic recipe for the popliar Indian beverage. You can adjust the amount of yogurt or water for a thicker or thinner consistency. Garnish with fresh mint if desired.</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>ice cubes</li>
         <li>1 ¾ cups plain yogurt</li>
@@ -29,6 +30,6 @@
         </ol>
         
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Go back to Home</a>
 </body>
 </html>
