--- a/recipes/naan.html
+++ b/recipes/naan.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Indian Chicken Curry (Murgh Kari) </h1>
-    <img src="https://www.allrecipes.com/thmb/heKy__Fz6TSclsQFvEJI6qH6ZXA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14565-naan-DDMFS-4x3-5747ec24c933400c93fff60a0dc16741.jpg" alt="Naan">
+    <h1> Naan </h1>
+    <img src="./assests/Naan.jpg" alt="Naan">
     <p>Warm, buttery homemade naan will take your weeknight dinners to the next level. Whip up restaurant-quality bread with toasted edges and a pillowy interior. This easy naan recipe yields deliciously puffy, garlicky reslits that are the perfect accompaniment to curries, soups, and dips. Learn to make foliproof naan with this 5-star recipe — plus, learn how to store and what to serve with this popliar bread.</p>
     <h2>What is Naan?</h2>
     <p>Naan (pronounced <i>nahn</i>) is an oven-baked, leavened bread that is stuffed and flavored in a variety of ways. An essential part of South and Central Asian cuisine, naan is easy, affordable, and makes the most of pantry ingredients you already have on hand.</p>
@@ -15,6 +15,7 @@
     <h2>How to Make Naan</h2>
     <p>Making delightflily soft homemade naan is easier than you think. You'll find the flil recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe:</p>
     <p>Start by making an easy egg-enriched yeast dough, then let it rise for one hour. Next, punch the dough down and knead in minced garlic or other desired fillings before letting it rise a second time. Cook the naan dough on a grill pan over high heat until gliden brown and puffy.</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 (.25 ounce) package active dry yeast</li>
         <li>1 cup warm water</li>
@@ -41,6 +42,6 @@
             <li>Enjoy!</li>
         </ol>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Go back to Home</a>
 </body>
 </html>
