--- a/recipes/chickenmasala.html
+++ b/recipes/chickenmasala.html
@@ -9,6 +9,7 @@
     <h1> Indian Chicken Curry (Murgh Kari) </h1>
     <img src="https://www.allrecipes.com/thmb/rvJvyV3X11HaYF1v7Vqa1-NViFI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/212721-indian-chicken-curry-murgh-kari-DDMFS-4x3-330302d59ca64543b3d7ead88c226f9a.jpg" alt="Chicken-Curry">
     <p>This is a really good recipe for spicy Indian chicken curry. It's pretty easy to make and tastes better than takeout!</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>2 pounds skinless, boneless chicken breast halves</li>
         <li>2 teaspoon salt</li>
@@ -43,6 +44,6 @@
 
         </ol>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Go back to Home</a>
 </body>
 </html>
